<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_inbox"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/nav_inbox"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_drafts"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_drafts"
            />
        <item
            android:id="@+id/nav_sent"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_sent"
            />
        <item
            android:id="@+id/nav_trash"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/nav_trash"
            />


    </group>

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calender"
            android:icon="@android:drawable/ic_menu_month"
            android:title="@string/calender"
            />
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/camera"
            />
        <item
            android:id="@+id/nav_upload"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/upload"
            />
    </group>
    <item
        android:title="@string/nav_support"
        >
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help"
                />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback"
                />
            <item
                android:id="@+id/nav_faq"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/faq"
                />
        </menu>
    </item>

</menu>